@@ -4,7 +4,7 @@ AC_INIT(acinclude.m4)
 PACKAGE=exult
 MAJOR=0
 RELNUM=20
-VERSION='$MAJOR.$RELNUM'
+VERSION=$MAJOR.$RELNUM
 
 AM_INIT_AUTOMAKE($PACKAGE,$VERSION,no-define)
 AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
@@ -209,6 +209,4 @@ fi
 
 AC_OUTPUT(Makefile \
 audio/Makefile \
-npc/Makefile \
-script/Makefile \
 conf/Makefile)
